# telegramFetcher

./: .env.example  .gitignore  README.md  pyproject.toml  tg_packer.py
spec/: big_spec.md  competitor_notes.md  dev_spec.md  telethon_notes.md
tests/: __init__.py  test_db.py  test_exporter.py  test_sync.py  test_utils.py
tgx/: __init__.py  client.py  db.py  exporter.py  main.py  sync.py  utils.py
