[project]
name = "tgx"
version = "0.1.0"
description = "Personal Telegram archiver/exporter CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36.0",
    "qrcode>=7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tgx = "tgx.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line length handled separately
    "W293",   # Blank line contains whitespace (auto-formatter handles this)
    "SIM108", # Use ternary - reduces readability in some cases
    "B904",   # raise from - not always clearer
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start relaxed, tighten later
ignore_missing_imports = true

