[project]
name = "tgx"
version = "0.1.0"
description = "Personal Telegram archiver/exporter CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.36.0",
    "qrcode>=7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
tgx = "tgx.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line length handled separately
    "W293",   # Blank line contains whitespace (auto-formatter handles this)
    "SIM108", # Use ternary - reduces readability in some cases
    "SIM105", # contextlib.suppress doesn't work with async/await patterns
    # Note: B904 (raise from) is now enabled for better error debugging
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# Note: disallow_untyped_defs is set per-module below
# Functions accepting Telethon entities or sqlite3.Row need Any annotations
# which would require custom type stubs

# Stricter type checking for new/clean modules
[[tool.mypy.overrides]]
module = ["tgx.main", "tgx.db"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

# Relaxed for modules with external untyped objects (Telethon entities, sqlite3.Row)
[[tool.mypy.overrides]]
module = ["tgx.sync", "tgx.exporter", "tgx.utils", "tgx.client"]
disallow_untyped_defs = false
check_untyped_defs = true

# Relaxed for tests
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

